artifacts/reporting/stock_reports/archive/v0.1/20260814/300950_KODEX 게임산업.md
# [KODEX 게임산업 (300950)] 종목 리포트 v0.1

- **시장 구분**: `ETF`
- **분석 기준일 (Requested As-Of)**: `2026-08-14`
- **신선도 기준일 (Reference Market Date)**: `2026-08-14`
- **리포트 상태**: `PARTIAL`

---

## 0. 핵심 요약 (Executive Summary)
> **KODEX 게임산업(300950)는 현재 Pattern A BASE 단계이며, 필수 데이터 부족(DATA_UNAVAILABLE)으로 투자 적격성을 판정할 수 없습니다.**
>
> - 현재 Pattern A Score는 48.28점(Stage: BASE, Candidate: NO)입니다.
> - 필수 데이터 부족(REQUIRED_METRIC_UNAVAILABLE)으로 Phase 10 Investability 판정이 불가능합니다.
> - 외국인 수급: 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다.
> - 거래대금 추세: 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 6.17억원, 20일: 4.22억원, 60일: 10.42억원)

현재 KODEX 게임산업은(는) Pattern A Score 48.28점, BASE 단계이며 필수 데이터 부족(REQUIRED_METRIC_UNAVAILABLE)으로 투자 적격성 판정이 보류되었습니다. 최근 12개월 동안 TRANSITION(60.25점)에서 BASE(48.28점)로 국면 이동이 관찰되었습니다. 외국인 수급은 FLOW_UNAVAILABLE 상태로, 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다. 거래대금은 TRADING_VALUE_MIXED 상태로, 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 6.17억원, 20일: 4.22억원, 60일: 10.42억원)

---

## 1. 현재 기술적 국면 & 투자 적격성 스냅샷 (Current Snapshot)
- **Pattern A Score**: `48.28`
- **공식 국면 (Official Stage)**: `BASE`
- **Candidate 판정**: `NO (watch)`
- **시가총액**: `N/A`
- **20일 평균 거래대금**: `4.22억원`
- **Investability 상태**: `DATA_UNAVAILABLE` (사유: `REQUIRED_METRIC_UNAVAILABLE`)
- **최종 투자 가능 여부 (Is Investable)**: `NO`

---

## 2. Pattern A FAST 현재 신호 (`Experimental / Early Signal`)
- **Contract**: `HIERARCHICAL_V01` (`PHASE_13_RESEARCH_CLOSED / HIERARCHICAL_V01_PRODUCTION_HOLD`)
- **기준 주 (As-Of)**: `2026-08-14`
- **FAST Score**: `44.06`
- **Score Availability**: `READY`
- **FAST Stage**: `SETUP`
- **Stage Availability**: `READY`
- **Monthly Regime**: `EARLY_REGIME`
- **Daily Risk**: `NORMAL`
- **해석**: 주봉 기준 상승 전환 가능성을 보여주는 초기 구조가 형성되고 있으나 아직 Trigger 단계는 아닙니다.

> Pattern A FAST는 Pattern A와 독립적인 실험적(Experimental) 조기 신호이며, Pattern A Score/Stage/Candidate/Production Ranking에 영향을 주지 않습니다. 두 모델의 Score를 합산하거나 상대 우열을 계산하지 않습니다.

---

## 3. Pattern A Monthly History — 최근 12개월 월별 추이 (Recent 12M Trajectory)

| 기준일 | 종가 | Pattern A Score | Stage | Candidate State | Data Available |
|---|---:|---:|---|---|---|
| 2025-07-31 | 6,965 | 60.25 | TRANSITION | candidate | True |
| 2025-08-29 | 6,855 | 72.68 | TRANSITION | candidate | True |
| 2025-09-30 | 6,830 | 73.60 | TRANSITION | candidate | True |
| 2025-10-31 | 6,560 | 75.74 | TRANSITION | candidate | True |
| 2025-11-28 | 6,305 | 69.33 | WEAK | blocked | True |
| 2025-12-30 | 6,040 | 59.33 | WEAK | blocked | True |
| 2026-01-30 | 6,885 | 58.32 | BASE | watch | True |
| 2026-02-27 | 6,575 | 62.93 | BASE | watch | True |
| 2026-03-31 | 6,610 | 66.45 | BASE | watch | True |
| 2026-04-30 | 6,930 | 70.39 | TRANSITION | candidate | True |
| 2026-05-29 | 6,360 | 65.10 | BASE | watch | True |
| 2026-06-30 | 5,855 | 60.29 | BASE | watch | True |
| 2026-07-31 | 5,700 | 48.28 | BASE | watch | True |

- **점수 변화 모멘텀**: 1M (-12.01), 3M (-22.11), 6M (-10.04), 12M (-11.97)

---

## 4. Pattern A 국면 전환 이력 (Stage Transition History)
- **2021-06-30**: `UNAVAILABLE` -> `PROGRESSED`
- **2021-09-30**: `PROGRESSED` -> `TRANSITION`
- **2021-11-30**: `TRANSITION` -> `PROGRESSED`
- **2021-12-30**: `PROGRESSED` -> `EARLY_TREND`
- **2022-01-28**: `EARLY_TREND` -> `TRANSITION`
- **2022-06-30**: `TRANSITION` -> `WEAK`
- **2024-07-31**: `WEAK` -> `TRANSITION`
- **2024-08-30**: `TRANSITION` -> `BASE`
- **2024-11-29**: `BASE` -> `WEAK`
- **2025-05-30**: `WEAK` -> `BASE`
- **2025-06-30**: `BASE` -> `TRANSITION`
- **2025-11-28**: `TRANSITION` -> `WEAK`
- **2026-01-30**: `WEAK` -> `BASE`
- **2026-04-30**: `BASE` -> `TRANSITION`
- **2026-05-29**: `TRANSITION` -> `BASE`

---

## 5. Pattern A FAST Weekly History (`Experimental / Early Signal`)
- **Contract**: `HIERARCHICAL_V01` (`PHASE_13_RESEARCH_CLOSED / HIERARCHICAL_V01_PRODUCTION_HOLD`)
- **History 시작 주**: `2025-08-22`
- **History 종료 주**: `2026-08-14`
- **총 주별 관측 개수**: `49주`

| 기준 주 (Week Ending) | 종가 | FAST Score | Score Availability | FAST Stage | Stage Availability | Monthly Regime | Daily Risk |
|---|---:|---:|---|---|---|---|---|
| 2025-08-22 | 6,785 | 61.42 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-08-29 | 6,855 | 59.17 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-05 | 6,795 | 59.17 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-12 | 7,050 | 65.30 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-19 | 7,255 | 67.75 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-26 | 6,850 | 55.67 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-10 | 6,760 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-17 | 6,460 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-24 | 6,490 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-31 | 6,560 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-11-07 | 6,395 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-11-14 | 6,695 | 54.62 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2025-11-21 | 6,065 | 53.31 | READY | WATCH | READY | PERMITTED_REGIME | NORMAL |
| 2025-11-28 | 6,305 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2025-12-05 | 6,305 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2025-12-12 | 6,140 | 41.88 | READY | WATCH | READY | EARLY_REGIME | NORMAL |
| 2025-12-19 | 6,025 | 41.88 | READY | WATCH | READY | EARLY_REGIME | NORMAL |
| 2025-12-26 | 6,045 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-01-02 | 6,255 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-01-09 | 6,040 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-01-16 | 6,220 | 45.38 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-01-23 | 6,345 | 41.88 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-01-30 | 6,885 | 69.44 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-02-06 | 6,530 | 51.06 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-02-13 | 6,585 | 54.56 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-02-20 | 6,780 | 69.44 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-02-27 | 6,575 | 58.67 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-03-06 | 6,380 | 45.81 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-03-13 | 6,695 | 64.19 | READY | TREND | READY | PERMITTED_REGIME | ELEVATED |
| 2026-03-20 | 6,185 | 50.36 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-03-27 | 6,585 | 70.49 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-04-03 | 6,390 | 57.86 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-04-10 | 6,395 | 60.31 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-04-17 | 6,770 | 72.74 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-04-24 | 7,000 | 74.05 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-08 | 6,580 | 70.29 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-15 | 6,505 | 58.91 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-05-22 | 6,545 | 70.29 | READY | TREND | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-29 | 6,360 | 55.61 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-05 | 6,275 | 55.61 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-12 | 6,090 | 46.86 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-06-19 | 6,075 | 55.61 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-26 | 5,300 | 43.71 | READY | WATCH | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-03 | 5,930 | 54.56 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-10 | 5,875 | 54.56 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-24 | 5,540 | 51.06 | READY | WATCH | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-31 | 5,700 | 40.56 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-08-07 | 5,895 | 44.06 | READY | SETUP | READY | EARLY_REGIME | NORMAL |
| 2026-08-14 | 5,740 | 44.06 | READY | SETUP | READY | EARLY_REGIME | NORMAL |

> Pattern A와 동일 timeline 표로 합치지 않습니다. Pattern A는 월 단위, Pattern A FAST는 주 단위가 각 모델의 핵심 시간축입니다. FAST Score가 `N/A`(UNAVAILABLE)인 경우 `0`이 아니라 데이터 부족을 의미합니다.

---

## 6. 외국인 수급 확증 (Foreign Flow Analysis - Phase 11)
- **수급 데이터 상태**: `DATA_UNAVAILABLE`
- **수급 국면 판정**: `FLOW_UNAVAILABLE`
- **규칙 기반 해석**: 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다.


---

## 7. 거래대금 추세 분석 (Trading Value Flow)
- **거래대금 상태**: `TRADING_VALUE_MIXED`
- **규칙 기반 해석**: 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 6.17억원, 20일: 4.22억원, 60일: 10.42억원)
- **5일 평균 거래대금**: `6.17억원`
- **20일 평균 거래대금**: `4.22억원`
- **60일 평균 거래대금**: `10.42억원`
- **단기 확장 비율 (5D / 20D)**: `1.46배`
- **중기 확장 비율 (20D / 60D)**: `0.40배`

---

## 8. Pattern A 전체 월별 이력 (Full Monthly History)
- **전체 관측 시작월**: `2018-07-31`
- **전체 관측 종료월**: `2026-07-31`
- **최초 Pattern A 산출월**: `2021-06-30`
- **총 월별 관측 개수**: `97개월` (Pattern A 산출 가능: `62개월`)

| 기준일 | 종가 | Pattern A Score | Stage | Candidate State | Data Available | Reason |
|---|---:|---:|---|---|---|---|
| 2018-07-31 | 9,510 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-08-31 | 9,385 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-09-28 | 9,455 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-10-31 | 8,530 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-11-30 | 9,645 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-12-28 | 9,295 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-01-31 | 9,235 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-02-28 | 9,710 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-03-29 | 9,820 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-04-30 | 10,010 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-05-31 | 9,265 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-06-28 | 9,285 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-07-31 | 8,195 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-08-30 | 8,770 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-09-30 | 8,690 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-10-31 | 8,665 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-11-29 | 8,410 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-12-30 | 8,865 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-01-31 | 9,155 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-02-28 | 8,910 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-03-31 | 8,645 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-04-29 | 9,375 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-05-29 | 10,430 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-06-30 | 11,575 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-07-31 | 12,125 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-08-31 | 12,900 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-09-29 | 12,900 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-10-30 | 11,180 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-11-30 | 11,960 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2020-12-30 | 13,240 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-01-29 | 13,625 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-02-26 | 13,040 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-03-31 | 13,920 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-04-30 | 13,040 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-05-31 | 13,405 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2021-06-30 | 13,335 | 79.38 | PROGRESSED | late | True | - |
| 2021-07-30 | 14,030 | 82.09 | PROGRESSED | late | True | - |
| 2021-08-31 | 13,430 | 93.49 | PROGRESSED | late | True | - |
| 2021-09-30 | 12,905 | 87.81 | TRANSITION | candidate | True | - |
| 2021-10-29 | 15,690 | 93.46 | TRANSITION | candidate | True | - |
| 2021-11-30 | 17,760 | 86.09 | PROGRESSED | late | True | - |
| 2021-12-30 | 17,420 | 86.42 | EARLY_TREND | candidate | True | - |
| 2022-01-28 | 12,760 | 80.35 | TRANSITION | candidate | True | - |
| 2022-02-28 | 12,155 | 81.80 | TRANSITION | candidate | True | - |
| 2022-03-31 | 12,515 | 79.88 | TRANSITION | candidate | True | - |
| 2022-04-29 | 10,590 | 78.43 | TRANSITION | candidate | True | - |
| 2022-05-31 | 10,575 | 73.15 | TRANSITION | candidate | True | - |
| 2022-06-30 | 8,355 | 55.62 | WEAK | blocked | True | - |
| 2022-07-29 | 8,940 | 42.91 | WEAK | blocked | True | - |
| 2022-08-31 | 9,070 | 28.34 | WEAK | blocked | True | - |
| 2022-09-30 | 7,770 | 19.18 | WEAK | blocked | True | - |
| 2022-10-31 | 7,565 | 16.44 | WEAK | blocked | True | - |
| 2022-11-30 | 8,440 | 17.21 | WEAK | blocked | True | - |
| 2022-12-29 | 7,985 | 15.52 | WEAK | blocked | True | - |
| 2023-01-31 | 8,490 | 6.07 | WEAK | blocked | True | - |
| 2023-02-28 | 8,545 | 0.00 | WEAK | blocked | True | - |
| 2023-03-31 | 8,260 | 0.00 | WEAK | blocked | True | - |
| 2023-04-28 | 8,255 | 0.00 | WEAK | blocked | True | - |
| 2023-05-31 | 7,885 | 0.00 | WEAK | blocked | True | - |
| 2023-06-30 | 7,420 | 0.00 | WEAK | blocked | True | - |
| 2023-07-31 | 6,990 | 0.00 | WEAK | blocked | True | - |
| 2023-08-31 | 6,410 | 0.00 | WEAK | blocked | True | - |
| 2023-09-27 | 5,945 | 0.00 | WEAK | blocked | True | - |
| 2023-10-31 | 6,105 | 0.00 | WEAK | blocked | True | - |
| 2023-11-30 | 7,110 | 0.00 | WEAK | blocked | True | - |
| 2023-12-28 | 6,975 | 0.00 | WEAK | blocked | True | - |
| 2024-01-31 | 6,600 | 0.00 | WEAK | blocked | True | - |
| 2024-02-29 | 6,595 | 0.00 | WEAK | blocked | True | - |
| 2024-03-29 | 6,915 | 0.00 | WEAK | blocked | True | - |
| 2024-04-30 | 6,470 | 0.00 | WEAK | blocked | True | - |
| 2024-05-31 | 6,800 | 0.00 | WEAK | blocked | True | - |
| 2024-06-28 | 6,990 | 1.36 | WEAK | blocked | True | - |
| 2024-07-31 | 7,095 | 20.14 | TRANSITION | candidate | True | - |
| 2024-08-30 | 7,125 | 31.78 | BASE | watch | True | - |
| 2024-09-30 | 7,250 | 36.32 | BASE | watch | True | - |
| 2024-10-31 | 7,365 | 43.93 | BASE | watch | True | - |
| 2024-11-29 | 7,390 | 49.71 | WEAK | blocked | True | - |
| 2024-12-30 | 6,630 | 45.21 | WEAK | blocked | True | - |
| 2025-01-31 | 6,710 | 39.67 | WEAK | blocked | True | - |
| 2025-02-28 | 6,600 | 33.37 | WEAK | blocked | True | - |
| 2025-03-31 | 6,180 | 27.25 | WEAK | blocked | True | - |
| 2025-04-30 | 6,510 | 27.52 | WEAK | blocked | True | - |
| 2025-05-30 | 6,670 | 33.14 | BASE | watch | True | - |
| 2025-06-30 | 7,530 | 49.41 | TRANSITION | candidate | True | - |
| 2025-07-31 | 6,965 | 60.25 | TRANSITION | candidate | True | - |
| 2025-08-29 | 6,855 | 72.68 | TRANSITION | candidate | True | - |
| 2025-09-30 | 6,830 | 73.60 | TRANSITION | candidate | True | - |
| 2025-10-31 | 6,560 | 75.74 | TRANSITION | candidate | True | - |
| 2025-11-28 | 6,305 | 69.33 | WEAK | blocked | True | - |
| 2025-12-30 | 6,040 | 59.33 | WEAK | blocked | True | - |
| 2026-01-30 | 6,885 | 58.32 | BASE | watch | True | - |
| 2026-02-27 | 6,575 | 62.93 | BASE | watch | True | - |
| 2026-03-31 | 6,610 | 66.45 | BASE | watch | True | - |
| 2026-04-30 | 6,930 | 70.39 | TRANSITION | candidate | True | - |
| 2026-05-29 | 6,360 | 65.10 | BASE | watch | True | - |
| 2026-06-30 | 5,855 | 60.29 | BASE | watch | True | - |
| 2026-07-31 | 5,700 | 48.28 | BASE | watch | True | - |

---

## 9. 데이터 품질 및 신원 (Data Quality & Provenance)
- **로컬 일봉 캐시**: `정상 로드 (1978행)`
- **데이터 기간**: `2018-07-24` ~ `2026-08-14`
- **완성 월봉 수**: `97개월`
- **데이터 품질 상태**: `OK`
- **적용 계약**: Score(`pattern_a_score_v0.2`), Stage(`pattern_a_stage_v0.1`), Investability(`phase10`), Flow(`phase11`)
- **외부 네트워크 요청**: `0회` (Zero Network Request)

---

*주의 (Disclaimer): 본 리포트는 기술적 지표 및 과거 수급/유동성 통계에 기반한 설명 자료이며, 매수/매도 추천이나 목표가를 제시하지 않습니다.*
